<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.houbenz.deeplearning.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_results"
        android:name="com.houbenz.deeplearning.ui.results.ResultsFragment"
        android:label="@string/title_results"
        tools:layout="@layout/fragment_results" />

    <fragment
        android:id="@+id/navigation_predict"
        android:name="com.houbenz.deeplearning.ui.predict.PredictFragment"
        android:label="@string/title_predict"
        tools:layout="@layout/fragment_predict" />
</navigation>